implemented fav album and footer

--- a/index.html
+++ b/index.html
@@ -117,7 +117,24 @@
         </div>
     </div>
 
-    </div>
+    <h1 id="hall-of-fame">Review of Best Album</h1>
+    <section id="best-album">
+        <div class="container py-5  text-white">
+
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <img class="img-fluid" style="width:500px" src="https://tinyurl.com/3sa7hak5" alt="...">
+                </div>
+                <div class="cold-12 col-md-8"
+                <div class="d-flex flex-column justify-cotent-center h-100">
+                    <h4>made in the pyrex</h4>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        </div>
+    </section>
 
     <div id="worst-album" class="container">
 
@@ -187,6 +204,19 @@
                 <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Sarath-97" role="button">
                     <i class="bi bi-github"></i></a>
             </section>
+        </div>
+
+        <div class="container">
+        <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Example textarea</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+          </form>
         </div>
 
 
