--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
             </section>
         </div>
 
-        <div class="container">
+        <div class="container col-12 col-md-4">
+            <h1>Contact Me</h1>
         <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address</label>
