--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
     <!-- <div class="parallax"></div>
     <div class="container"> -->
-
+        
     <h1 id="hall-of-fame">hall of fame</h1>
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 my-5">
+    
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 my-5 px-5">
         <div class="col mb-4">
             <span class="badge badge-secondary">Uk Rap</span>
             <div class="card fav-card">
@@ -116,6 +117,7 @@
             </div>
         </div>
     </div>
+
 
     <h1 id="hall-of-fame">Review of Best Album</h1>
     <section id="best-album">
@@ -210,11 +212,11 @@
             <h1>Contact Me</h1>
         <form>
             <div class="form-group">
-              <label for="exampleFormControlInput1">Email address</label>
+              <label for="exampleFormControlInput1">Email address :</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlTextarea1">Example textarea</label>
+              <label for="exampleFormControlTextarea1">Message :</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
           </form>
